chore(feat/user): init implementation of user module

--- a/biome.json
+++ b/biome.json
@@ -40,6 +40,9 @@
       "suspicious": {
         "noConsole": "error"
       },
+      "complexity": {
+        "noForEach": "off"
+      },
       "correctness": {
         "noEmptyPattern": {
           "level": "warn"
