feat(config/structure): add translation

--- a/biome.json
+++ b/biome.json
@@ -38,7 +38,9 @@
     "rules": {
       "recommended": true,
       "suspicious": {
-        "noConsole": "error"
+        "noConsole": "error",
+        "noExplicitAny": "off",
+        "noConfusingVoidType": "off"
       },
       "complexity": {
         "noForEach": "off"
