--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@commitlint/config-conventional": "^19.7.1",
     "@prisma/client": "^6.3.1",
     "@prisma/extension-accelerate": "^1.2.1",
+    "dayjs": "^1.11.13",
     "husky": "^9.1.7",
     "next": "15.1.7",
     "react": "^19.0.0",
