--- a/package.json
+++ b/package.json
@@ -16,12 +16,19 @@
     "@commitlint/config-conventional": "^19.7.1",
     "@prisma/client": "^6.3.1",
     "@prisma/extension-accelerate": "^1.2.1",
+    "@radix-ui/react-slot": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "husky": "^9.1.7",
+    "lucide-react": "^0.475.0",
     "next": "15.1.7",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sass": "^1.84.0"
+    "sass": "^1.84.0",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@biomejs/monorepo": "biomejs/biome",
