--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^19.0.0",
     "sass": "^1.84.0",
     "tailwind-merge": "^3.0.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@biomejs/monorepo": "biomejs/biome",
