--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "husky": "^9.1.7",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.475.0",
+    "motion": "^12.4.3",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "sass": "^1.84.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
@@ -34,6 +36,7 @@
   },
   "devDependencies": {
     "@biomejs/monorepo": "biomejs/biome",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
