refactor(feat/user): new structure folders

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,26 +23,8 @@
       }
     ],
     "paths": {
-      "@main/*": [
-        "./src/main/*",
-      ],
-      "@shared/*": [
-        "./src/shared/*",
-      ],
-      "@assets/*": [
-        "./src/assets/*",
-      ],
-      "@domain/*": [
-        "./src/core/domain/*"
-      ],
-      "@infra/*": [
-        "./src/core/infra/*"
-      ],
-      "@application/*": [
-        "./src/core/application/*"
-      ],
-      "@presentation/*": [
-        "./src/core/presentation/*"
+      "@/*": [
+        "./src/*",
       ],
     }
   },
