feat(feat/signup): add support for JWT token authentication

--- a/package.json
+++ b/package.json
@@ -18,11 +18,9 @@
     "@prisma/client": "^6.3.1",
     "@prisma/extension-accelerate": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.2",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "husky": "^9.1.7",
-    "jsonwebtoken": "^9.0.2",
+    "jose": "^5.10.0",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.3",
     "next": "15.1.7",
@@ -33,15 +31,16 @@
     "react-hot-toast": "^2.5.2",
     "sass": "^1.84.0",
     "tailwind-merge": "^3.0.1",
+    "tailwind-variants": "^0.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@biomejs/monorepo": "biomejs/biome",
-    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/yup": "^0.32.0",
     "postcss": "^8",
     "prisma": "^6.3.1",
     "tailwindcss": "^3.4.1",
