--- a/biome.json
+++ b/biome.json
@@ -42,6 +42,12 @@
         "noExplicitAny": "off",
         "noConfusingVoidType": "off"
       },
+      "style": {
+        "useSelfClosingElements": {
+          "level": "warn",
+          "fix": "safe"
+        }
+      },
       "complexity": {
         "noForEach": "off",
         "noStaticOnlyClass": "off",
