--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@prisma/client": "^6.3.1",
     "@prisma/extension-accelerate": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "husky": "^9.1.7",
     "jose": "^5.10.0",
