--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
-    "sass": "^1.84.0",
+    "sass": "^1.85.0",
     "tailwind-merge": "^3.0.1",
     "tailwind-variants": "^0.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "xss": "^1.0.15",
     "yup": "^1.6.1"
   },
   "devDependencies": {
